--- a/css_reset.css
+++ b/css_reset.css
@@ -1,43 +1,42 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, head, link, body, header,
+img, h1, h2, nav, ul,
+ol, li, aside, table, tr,
+td, a, figure, p, figcaption,
+section, label, input, br, select,
+option, textarea, form, footer,
+article {
   margin: 0;
-  padding: 0;
   border: 0;
-  font-size: 100%;
+  padding: 0;
+
   font: inherit;
-  vertical-align: baseline;
+  text-align: inherit;
+  text-decoration: inherit;
+  color: inherit;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
+
+input[type="radio"], select, input[type="submit"] {
+  cursor: pointer;
+  outline: none;
 }
-body {
-  line-height: 1.5;
+
+form > input:last-child {
+  background-color: Gold;
+
 }
-ol, ul {
-  list-style: none;
+
+a[name="directions"] ol > li:nth-child(2n) {
+  background-color: LightGray;
 }
-blockquote, q {
-  quotes: none;
+
+h2 + .review {
+  border-top: 1px solid Black;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  width: 27px;
+  height: 27px;
+  background-image: url(./assets/stars.png);
+  vertical-align: bottom;
 }
